Apply hyphenation when there is only one word in a paragraph

The logic not to hyphenate the last word in a paragraph also prevented
single word in a paragraph from being hyphenated.

This patch hyphenates the single word case, as an exception to the
orphaned word. This is the same behavior with WebKit.

This patch also fixes not to hyphenate the last word when followed by
spaces.

BUG=671125

Review-Url: https://codereview.chromium.org/2557643002
Cr-Commit-Position: refs/heads/master@{#436926}

Former-commit-id: f16ecaf4fc414d951fe9b1699d96e7eba3eab13a